--- a/app/views/leads/index.html.haml
+++ b/app/views/leads/index.html.haml
@@ -191,8 +191,10 @@
         })
         .then(response => response.text())
         .then(data => {
+          console.log("data", data)
          var editFormContent = document.querySelector('.popup-content'); // Replace with actual selector
-          editFormContent.innerHTML = data; // Update specific container within the popup
+          editFormContent.innerHTML = data; 
+          // Update specific container within the popup
           editLeadPopup.classList.toggle('show'); // Show the popup
         })
         .catch(error => console.error('Error fetching edit form:', error));
@@ -218,16 +220,18 @@
         .map(cb => cb.value);
 
       var startDate = document.querySelector('input[name="start_date"]').value;
-      var endDate = document.querySelector('input[name="end_date"]').value;
+      if (startDate) {
+      checkedFilters.push("custom_range");
+    }
 
       var params = {
         date_filter: checkedFilters.join(','),
         start_date: startDate,
-        end_date: endDate
       };
 
       // Construct query parameters from params object
       var queryParams = new URLSearchParams(params).toString();
+      console.log("queryParams", queryParams)
 
         fetch('/leads/filter_date?' + queryParams, {
         method: 'GET',
@@ -248,7 +252,6 @@
             var statusClass = leadStatusClass(lead.status);
             var newRow = document.createElement('tr');
             newRow.innerHTML = `
-              <td>${lead.first_name} ${lead.last_name}</td>
               <td>${lead.company}</td>
               <td>${lead.phone || lead.mobile}</td>
               <td>${lead.email}</td>
@@ -309,7 +312,6 @@
         var statusClass = leadStatusClass(lead.status);
         var newRow = document.createElement('tr');
         newRow.innerHTML = `
-          <td>${lead.first_name} ${lead.last_name}</td>
           <td>${lead.company}</td>
           <td>${lead.phone || lead.mobile}</td>
           <td>${lead.email}</td>
