--- a/app/views/users/_user.html.haml
+++ b/app/views/users/_user.html.haml
@@ -4,30 +4,34 @@
 
 %div
   %div
-    %div.flex-center(valign="top")
+    %div.flex-center.mt-2(valign="top")
       = avatar_for(@user, style: "margin: 0px 10px 0px 0px")
     %div.text-center(valign="top")
       %h3.mt-1= h(@user.full_name) + " (#{@user.username})"
       - if !@user.title.blank? && !@user.company.blank?
         %div.mt-1= t(:works_at, job_title: h(@user.title), company: h(@user.company))
       - else
-        = h(@user.title) unless @user.title.blank?
-        = h(@user.company) unless @user.company.blank?
+        %div.mt-1= h(@user.title) unless @user.title.blank?
+        %div= h(@user.company) unless @user.company.blank?
       %br
       %div
         - unless @user.email.blank?
-          #{t :email}: #{auto_link(@user.email)}
+          %div
+            #{t :email}: #{auto_link(@user.email)}
         - unless @user.alt_email.blank?
-          #{t :or} #{auto_link(@user.alt_email)}
+          %div
+            #{t :or} #{auto_link(@user.alt_email)}
       - if !@user.phone.blank? && !@user.mobile.blank?
-        %div #{t :phone}: <b>#{@user.phone}</b>, #{t :mobile}: <b>#{@user.mobile}</b>
+        %div.mt-1 #{t :phone}: <b>#{@user.phone}</b>, #{t :mobile}: <b>#{@user.mobile}</b>
       - else
         - if @user.phone.present?
-          = t(:phone) + ":"
-          = content_tag(:b, @user.phone)
+          %div.mt-1
+            = t(:phone) + ":"
+            = content_tag(:b, @user.phone)
         - if @user.mobile.present?
-          = t(:mobile) + ":"
-          = content_tag(:b, @user.mobile)
+          %div.mt-1
+            = t(:mobile) + ":"
+            = content_tag(:b, @user.mobile)
 
 - if Setting.per_user_locale
   %script= render "languages"
