--- a/app/views/layouts/_sidebar.html.haml
+++ b/app/views/layouts/_sidebar.html.haml
@@ -17,7 +17,7 @@
       %div.mar-r
         %div.mar-r.iconOrangeCircle.font-icon-color
           %i.fa.fa-user
-      %div.mt-2
+      %div.mt-1.fs-14
         = link_to(current_user.name, profile_path)
   %ul.tabs.mt-2
     - tabs.each do |tab|
