--- a/app/views/leads/index.html.haml
+++ b/app/views/leads/index.html.haml
@@ -180,6 +180,8 @@
       link.addEventListener('click', function(event) {
         event.preventDefault();
         var url = this.href;
+        console.log("url" , url)
+        
         
 
         // Fetch edit form content via AJAX
