--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -102,7 +102,7 @@
         %div.font-orange-20
           %h4.mt-1 Recently Leads
         %div
-          %input#lead-name-filter_home.inputDate.newCustomButton{ placeholder: "Search Lead", type: "text" }
+          -# %input#lead-name-filter_home.inputDate.newCustomButton{ placeholder: "Search Lead", type: "text" }
       %div.flex-center.mt-2.table-responsive
         %table.fs-14.tableBorder
           %thead
